--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,4 +4,5 @@
   <li><%= link_to "Events", events_path %></li>
   <li><%= link_to "Athletes", athletes_path %></li>
   <li><%= link_to "Categories", competition_categories_path %></li>
+  <li><%= link_to "Users", users_path %></li>
 </ul>
