--- a/app/views/competitions/_welcome.html.erb
+++ b/app/views/competitions/_welcome.html.erb
@@ -5,6 +5,6 @@
       <%= link_to 'Greg Thaczuk.', about_path %>
     </p>
     <p>
-      <%= link_to 'Register', new_user_path, class: 'btn btn-primary btn-large' %>
+      <%= link_to 'Register', register_path, class: 'btn btn-primary btn-large' %>
     </p>
   </div>
