--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,14 @@
     <%= yield(:head) %>
   </head>
   <body>
-    <header>
-      <div class="navbar">
-        <div class="navbar-inner">
-          <div class="container">
-            <%= render 'layouts/navigation' %>
-          </div>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <%= render 'layouts/navigation' %>
         </div>
       </div>
-    </header>
+    </div>
+
     <div id="main" role="main">
       <div class="container">
          <div class="row">
