--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!doctype html>
-<html>
+<html data-no-turbolink>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Competition Scoring</title>
+    <title>Comp Controller</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -12,14 +12,15 @@
     <%= yield(:head) %>
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <%= render 'layouts/navigation' %>
+    <header>
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container">
+            <%= render 'layouts/navigation' %>
+          </div>
         </div>
       </div>
-    </div>
-
+    </header>
     <div id="main" role="main">
       <div class="container">
          <div class="row">
