--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-index.html.erb<%= render 'shared/header', header: 'Listing users' %>
+<%= render 'shared/header', header: 'Listing users' %>
 <table class="table table-striped">
   <thead>
     <tr>
