--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,52 +1,53 @@
-<%= link_to "Comp Controller", root_path, :class => 'brand nav' %>
-<div class="nav-collapse collapse">
-  <ul class="nav">
-    <li><%= link_to "Competitions", competitions_path %></li>
-    <% if logged_in? %>
-    <li><%= link_to "Events", events_path %></li>
-    <li><%= link_to "Athletes", athletes_path %></li>
-    <li><%= link_to "Categories", competition_categories_path %></li>
-    <li><%= link_to "Users", users_path %></li>
-    <li><%= link_to 'About', about_path %></li>
-  </ul>
 
-  <div class='btn-group pull-right'>
-    <%= link_to('#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do %>
-      <%= current_user.username %>
-      <span class='caret'></span>
-    <% end %>
-    <ul class="dropdown-menu">
-      <li>
-        <%= link_to(edit_user_path(current_user)) do %>
-          <i class='icon-pencil'></i>
-          edit profile
-        <% end %>
-      </li>
-      <li>
-        <%= link_to(user_path(current_user)) do %>
-          <i class='icon-user'></i>
-          view profile
-        <% end %>
-      </li>
-      <li>
-        <%= link_to(logout_path) do %>
-          <i class='icon-circle-arrow-left'></i>
-          logout
-        <% end %>
-      </li>
-    </ul>
-  </div>
+    <%= link_to "Comp Controller", root_path, :class => 'brand nav' %>
 
-  <% else # logged out %>
-    <li class="pull-right"><%= link_to 'About', about_path %></li>
-  </ul>
+            <ul class="nav">
+              <li><%= link_to "Competitions", competitions_path %></li>
+              <% if logged_in? %>
+              <li><%= link_to "Events", events_path %></li>
+              <li><%= link_to "Athletes", athletes_path %></li>
+              <li><%= link_to "Categories", competition_categories_path %></li>
+              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to 'About', about_path %></li>
+            </ul>
 
-    <%= form_tag '/login', :class => 'navbar-form pull-right' do %>
-      <%= text_field_tag :username %>
-      <%= password_field_tag :password %>
-      <%= submit_tag "Log in", :class => 'btn btn-small btn-success' %>
-    <% end %>
+            <div class='btn-group pull-right'>
+              <%= link_to('#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do %>
+                <%= current_user.username %>
+                <span class='caret'></span>
+              <% end %>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to(edit_user_path(current_user)) do %>
+                    <i class='icon-pencil'></i>
+                    edit profile
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to(user_path(current_user)) do %>
+                    <i class='icon-user'></i>
+                    view profile
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to(logout_path) do %>
+                    <i class='icon-circle-arrow-left'></i>
+                    logout
+                  <% end %>
+                </li>
+              </ul>
+            </div> <!--/.btn-group pull-right -->
 
-  <% end %>
+            <% else # logged out %>
+              <li class="pull-right"><%= link_to 'About', about_path %></li>
+            </ul>
 
-</div> <!--/.nav-collapse -->
+              <%= form_tag '/login', :class => 'navbar-form pull-right' do %>
+                <%= text_field_tag :username %>
+                <%= password_field_tag :password %>
+                <%= submit_tag "Log in", :class => 'btn btn-small btn-success' %>
+              <% end %>
+
+            <% end %>
+
+
