--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,6 +11,10 @@
     <%= f.label :role %>
     <%= f.text_field :role %>
   </div>
+  <div class="field">
+    <%= f.label :password %>
+    <%= f.text_field :password %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
