--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if obj.errors.any? %>
-  <div id="error_explanation" class="alert alert-error">
+  <div class="alert alert-error" id="error_explanation">
     <h2><%= pluralize(obj.errors.count, "error") %> prohibited this post from being saved:</h2>
 
     <ul>
