--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -25,7 +25,7 @@
     %td
       %strong Competition Id
     %td
-      = @event.competition_id
+      = @event.competition.name
 
 = link_to 'Edit', edit_event_path(@event)
 |
