--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -6,6 +6,7 @@
     %li= link_to "Athletes", athletes_path
     %li= link_to "Categories", competition_categories_path
     %li= link_to "Users", users_path
+    %li= link_to "Scores", event_athletes_path
     %li= link_to 'About', about_path
     .btn-group.pull-right
       = link_to('#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do
